--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -11,10 +11,10 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/ellipse"
         app:layout_constraintBottom_toTopOf="@id/container"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintStart_toStartOf="@id/left_guideline"/>
+        app:layout_constraintStart_toStartOf="@id/left_guideline" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_guideline"
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
+
     <View
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -52,11 +53,11 @@
         android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/right_guideline"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintStart_toEndOf="@id/left_guideline"
         android:text="@string/logged_out"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/right_guideline"
+        app:layout_constraintStart_toEndOf="@id/left_guideline"
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_logout"
@@ -76,6 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
+        android:background="@drawable/loginbutton"
         android:text="@string/log_in"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/container"
@@ -88,6 +90,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:background="@drawable/registerbutton"
         android:text="@string/register"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/container"
