--- a/app/src/main/res/layout/registerfirststep.xml
+++ b/app/src/main/res/layout/registerfirststep.xml
@@ -89,7 +89,7 @@
             android:id="@+id/btn_back"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
             android:src="@drawable/ic_backbutton"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
@@ -100,7 +100,7 @@
             android:id="@+id/tv_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/comfortaa"
             android:text="@string/register"
@@ -114,13 +114,16 @@
             android:id="@+id/et_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
+            android:background="@drawable/editextdesign"
             android:fontFamily="@font/roboto"
             android:hint="@string/jane_example_com"
+            android:inputType="textEmailAddress"
             android:minHeight="48dp"
+            android:padding="7dp"
             android:paddingVertical="20dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/gray"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintStart_toStartOf="@+id/left_guideline"
@@ -130,13 +133,16 @@
             android:id="@+id/et_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/editextdesign"
             android:fontFamily="@font/roboto"
             android:hint="@string/please_enter_your_password"
+            android:inputType="textPassword"
             android:minHeight="48dp"
+            android:padding="7dp"
             android:paddingVertical="20dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/gray"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintStart_toStartOf="@+id/left_guideline"
@@ -146,17 +152,17 @@
             android:id="@+id/btn_next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/registerbutton"
             android:text="@string/next"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintStart_toStartOf="@+id/left_guideline"
             app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </ScrollView>
