--- a/app/src/main/res/layout/registersecondstep.xml
+++ b/app/src/main/res/layout/registersecondstep.xml
@@ -90,7 +90,7 @@
             android:id="@+id/btn_back"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
             android:src="@drawable/ic_backbutton"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
@@ -101,7 +101,7 @@
             android:id="@+id/tv_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/comfortaa"
             android:text="@string/register"
@@ -115,12 +115,14 @@
             android:id="@+id/et_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
+            android:background="@drawable/editextdesign"
             android:fontFamily="@font/roboto"
             android:hint="@string/enter_username"
-            android:minHeight="48dp"
             android:inputType="text"
+            android:minHeight="48dp"
+            android:padding="7dp"
             android:paddingVertical="20dp"
             android:textColorHint="@color/Gray"
             android:textSize="18sp"
@@ -132,27 +134,28 @@
             android:id="@+id/btn_signUp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/registerbutton"
             android:text="@string/sign_up"
-            app:layout_constraintTop_toBottomOf="@id/et_username"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintStart_toStartOf="@+id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/et_username"
             tools:layout_editor_absoluteY="416dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/btn_signUp"
-            app:layout_constraintStart_toStartOf="@id/left_guideline"
-            app:layout_constraintEnd_toEndOf="@id/right_guideline"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
-            android:text="@string/policy"/>
+            android:text="@string/policy"
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
+            app:layout_constraintStart_toStartOf="@id/left_guideline"
+            app:layout_constraintTop_toBottomOf="@id/btn_signUp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </ScrollView>
